# CallOfWarLogger

./: .gitignore  .replit  LICENSE  README.md  config.py  data_collector.py  game_logger.py  input_tracker.py  ml_trainer.py  pyproject.toml  replit.nix  run_logger.bat  utils.py
attached_assets/: Pasted-I-need-a-Python-script-that-logs-and-records-player-data-and-actions-in-Call-of-Duty-World-at-War--1740201522424.txt
src/: config.py  data_logger.py  game_state.py  input_tracker.py  main.py  performance_monitor.py
